# code-auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scan-all.ps1
config/: ruff.toml
config/eslint/: .eslintrc.json
config/semgrep/: django-best-practices.yml  django-security.yml
integrations/github/: action.yml  pr_commenter.py
integrations/gitlab/: .gitlab-ci.yml
src/auditor/: __init__.py
src/auditor/api/: main.py  models.py
src/auditor/api/routes/: reports.py  scan.py
src/auditor/cli/: main.py
src/auditor/core/: cache.py  deduplicator.py  detector.py  enricher.py  normalizer.py  pipeline.py  raw.py  runner.py  schema.py
src/auditor/engines/: base.py
src/auditor/engines/django/: semgrep.py
src/auditor/engines/python/: bandit.py  ruff.py
src/auditor/engines/react/: eslint.py  npm_audit.py
src/auditor/parsers/: bandit_parser.py  eslint_parser.py  npm_audit_parser.py  ruff_parser.py  semgrep_parser.py
src/auditor/reporters/: cli_reporter.py  html_reporter.py  json_reporter.py
tests/: conftest.py  test_detector.py  test_parsers.py  test_pipeline.py  test_schema.py
tests/fixtures/sample_django/: models.py  settings.py  views.py
tests/fixtures/sample_react/: App.jsx  package.json
