[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-auditor"
version = "0.1.0"
description = "Multi-engine code audit platform for Python/Django/React"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
    "anyio>=4.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
audit = "auditor.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C90"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/auditor"]
